# Rust_programme

Assemblage/src/: main.rs
Assemblage/templates/: TESTzfre.html  choix.html  login.html  menushowthis.html  page3.html
Assemblagev2/: Cargo.toml
Assemblagev2/src/: main.rs
Assemblagev2/templates/: page1.css
Demo2/src/: main.rs
Demo2/templates/: login.html
HtmlBDD/: Cargo.toml
HtmlBDD/src/: main.rs
bdd_affichage/: Cargo.toml
bdd_affichage/src/: main.rs
crypto/: Cargo.toml
crypto/src/: main.rs
crypto/templates/: CA.html  MenuCrypto.html  Site.html  script.js  style.css  supprimer.html  verif.html
doublebdd/: Cargo.toml
doublebdd/src/: main.rs
html/: Cargo.toml
html/src/: main.rs
html/templates/: Marre.html
htmlcoco/: Cargo.toml
htmlcoco/src/: index.html  main.rs
varloc/: Cargo.toml
varloc/src/: main.rs
